--- a/layout-parts/q1/css/style.css
+++ b/layout-parts/q1/css/style.css
@@ -1,5 +1,44 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
+.main__list {
+  width: 900px;
+  margin: auto;
+  background: #eff3f4;
+  box-sizing: border-box;
+  padding: 20px;
+}
 
-/* 回答はここに書いてね */
+.main__list > li {
+  width: 270px;
+  background: #3274ae;
+  float: left;
+  padding: 20px;
+  margin-left: 20px;
+  box-sizing: border-box;
+}
+
+.main__list > li:first-child {
+  margin-left: 0;
+}
+
+.text-box {
+  width: 230px;
+  background: #eaf4ff;
+  border-width: 10px;
+  border-style: solid;
+  border-color: #022336;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.text-style {
+  font-size:16px;
+  line-height: 16px;
+}
+
+.clearfix::before,
+.clearfix::after {
+  display: block;
+  content: '';
+  clear: both;
+}
