--- a/layout-parts/q2/css/style.css
+++ b/layout-parts/q2/css/style.css
@@ -1,5 +1,26 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
+main {
+  width: 900px;
+  background: #eff3f4;
+  padding: 20px;
+  margin: auto;
+  box-sizing: border-box;
+}
 
-/* 回答はここに書いてね */
+p {
+  font-size: 17px;
+  line-height: 22px;
+}
+
+.fuusen {
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+.tyoutin {
+  float: right;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
