--- a/layout-parts/q4/css/style.css
+++ b/layout-parts/q4/css/style.css
@@ -1,5 +1,117 @@
 @charset "UTF-8";
 
-/* 回答はここに書いてね */
+.main-box {
+  width: 500px;
+  height: 500px;
+  background: #ECF1F2;
+  position: relative;
+  margin: auto;
+}
 
-/* 回答はここに書いてね */
+.box1 {
+  width: 100px;
+  height: 100px;
+  background: #ffefd3;
+  position: absolute;
+  top: 40px;
+  left: 200px;
+}
+
+.box2 {
+  width: 100px;
+  height: 100px;
+  background: #7084de;
+  position: absolute;
+  top: 120px;
+  left: 280px;
+  z-index: 20;
+}
+
+.box3 {
+  width: 100px;
+  height: 100px;
+  background: #d0ecea;
+  position: absolute;
+  top: 200px;
+  left: 360px;
+  z-index: 30;
+}
+
+.box4 {
+  width: 100px;
+  height: 100px;
+  background: #8b7a5e;
+  position: absolute;
+  top: 280px;
+  left: 280px;
+  z-index: 40;
+}
+
+.box5 {
+  width: 100px;
+  height: 100px;
+  background: #9fd6d2;
+  position: absolute;
+  top: 360px;
+  left: 200px;
+  z-index: 50;
+}
+
+.box6 {
+  width: 100px;
+  height: 100px;
+  background: #fffee4;
+  position: absolute;
+  top: 280px;
+  left: 120px;
+  z-index: 60;
+}
+
+.box7 {
+  width: 100px;
+  height: 100px;
+  background: #deae70;
+  position: absolute;
+  top: 200px;
+  left: 40px;
+  z-index: 70;
+}
+
+.box8{
+  width: 100px;
+  height: 100px;
+  background: #de70cf;
+  position: absolute;
+  top: 120px;
+  left: 120px;
+  z-index: 80;
+}
+
+.box9 {
+  width: 100px;
+  height: 100px;
+  background: #2b69a3;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+}
+
+.box8:before{
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  background: #ffefd3;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
+
+
+.box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
