--- a/layout-parts/q7/css/style.css
+++ b/layout-parts/q7/css/style.css
@@ -1,5 +1,167 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q7 {
+  font-size: 0;
+  text-align: center;
+}
+
+.q7-box {
+  display: inline-block;
+  margin: 10px;
+  font-size: 16px;
+  vertical-align: middle;
+  /*縦方向の位置を指定*/
+}
+
+.q7-text {
+  padding: 5px;
+  border: 1px solid #00bcd4;
+  border-radius: 5px;
+  /*角を丸くする*/
+}
+
+.q7-init {
+  background: none;
+  font-size: 16px;
+  outline: none;
+  -webkit-appearance: none;
+  /*スマホなどでも綺麗に表示する？*/
+}
+
+.q7-text::-webkit-input-placeholder {
+  color: #00BCD4;
+  }
+/*文字色を変える*/
+.q7-text:focus {
+  box-shadow: 0 0 7px #00BCD4;
+  }
+/*文字入力する際、ふわっとさせる*/
+
+.q7-textarea {
+    height: 40px;
+    padding: 5px;
+    border: 1px solid #00BCD4;
+    border-radius: 5px;
+    resize: none;
+  }
+
+.q7-radio {
+  cursor: pointer;
+  }
+
+.q7-radio-btn {
+  display: none;
+  }
+
+.q7-radio-text {
+    position: relative;
+    display: inline-block;
+    padding: 3px 3px 3px 20px;
+}
+
+.q7-radio-text:before {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 14px;
+    height: 14px;
+    margin-top: -8px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    content: '';
+}
+/*外枠の丸*/
+
+.q7-radio-btn:checked + .q7-radio-text:after {
+    position: absolute;
+    top: 50%;
+    left: 4px;
+    width: 8px;
+    height: 8px;
+    margin-top: -4px;
+    background-color: #00BCD4;
+    border-radius: 50%;
+    content: '';
+}
+/*チェックした時の青い丸*/
+
+.q7-check {
+  cursor: pointer;
+}
+
+.q7-check-btn {
+  display: none;
+}
+
+.q7-check-text {
+    position: relative;
+    display: inline-block;
+    padding: 3px 3px 3px 22px;
+}
+
+.q7-check-text:before {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 0;
+    width: 14px;
+    height: 14px;
+    margin-top: -8px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
+
+.q7-check-btn:checked + .q7-check-text:after {
+    position: absolute;
+    content: '';
+    top: 5px;
+    left: 3px;
+    width: 13px;
+    height: 5px;
+    border-bottom: 2px solid #00BCD4;
+    border-left: 2px solid #00BCD4;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    /*線を曲げてチェックを作る*/
+}
+
+.q7-select {
+    position: relative;
+    background-color: #FFF;
+}
+
+.q7-select:before {
+    position: absolute;
+    top: 7px;
+    right: 9px;
+    width: 8px;
+    height: 8px;
+    border-bottom: 2px solid #ccc;
+    border-left: 2px solid #ccc;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    content: "";
+}
+
+.q7-select-item {
+    position: relative;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 5px 30px 5px 5px;
+    font-size: 14px;
+}
+.q7-btn {
+    padding: 5px 10px;
+    border: 1px solid #00BCD4;
+    border-radius: 5px;
+    color: #00BCD4;
+    cursor: pointer;/*重ねた時に指の形にする*/
+}
+.q7-btn:active {
+    background-color: #00BCD4;
+    color: #FFF;
+}
 
 /* 回答はここに書いてね */
