--- a/layout-parts/q9/css/style.css
+++ b/layout-parts/q9/css/style.css
@@ -1,5 +1,71 @@
 @charset "UTF-8";
+.container {
+  background: #ecf1f2;
+  width: 100%;
+}
 
-/* 回答はここに書いてね */
+.item {
+  width: 100%;
+}
+
+.gridbox {
+  padding: 10px 10px 10px 10px;
+  box-sizing: border-box;
+  float: left;
+}
+
+.box1 {
+  width: 100%;
+  padding: 20px 20px 10px 20px;
+  box-sizing: border-box;
+}
+
+.box2 {
+  width: 50%;
+}
+
+.box3 {
+  width: 33.33%;
+}
+
+.box4 {
+  width: 25%;
+}
+
+.box5 {
+  width: 20%;
+}
+
+.box6 {
+  width: 16.66%
+}
+
+.center {
+  background: #fff;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gridbox:first-child{
+  padding-left: 20px;
+  box-sizing: border-box;
+}
+
+.gridbox:last-child{
+  padding-right: 20px;
+  box-sizing: border-box;
+}
+
+.container:last-child{
+  padding-bottom: 10px;
+}
+.item::before,
+.item::after {
+  display: block;
+  content: '';
+  clear: both;
+}
 
 /* 回答はここに書いてね */
