--- a/layout-parts/q11/css/style.css
+++ b/layout-parts/q11/css/style.css
@@ -2,4 +2,96 @@
 
 /* 回答はここに書いてね */
 
+/*transition*/
+.image-box {
+  width: 500px;
+  height: 333px;
+  background-color: rgba(0,0,0,8);
+  position: relative;
+  overflow: hidden;
+  margin: auto;
+}
+.image-box img {
+  display: block;
+  width: 100%;
+  opacity: 1;
+  -webkit-transition: opacity 0.5s, transform 0.5s;
+  transition: opacity 0.5s, transform 0.5s;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+.image-box:hover img {
+  opacity: 0.7;
+  -webkit-transform: scale3d(1.2, 1.2, 1);
+  transform: scale3d(1.2, 1.2, 1);
+}
+.screan {
+  opacity: 0;
+  position: absolute;
+  top: 257px;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 100%;
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+.image-box:hover .screan {
+  opacity: 1;
+}
+.text-box {
+  padding: 20px;
+  -webkit-transform: scale3d(0, 0, 1);
+  transform: scale3d(0, 0, 1);
+  -webkit-transition: transform 0.5s, color 0.5s;
+  transition: transform 0.5s, color 0.5s;
+}
+.image-box:hover .text-box {
+  color: white;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+/*animation*/
+.loader {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 10px solid #00bcd4;
+  border-radius: 65%;
+  animation: spin 1.1s infinite linear;
+  border-top-color: #ecf1f2;
+  border-left-color: #ecf1f2;
+  border-bottom-color: #ecf1f2;
+}
+
+.loader::before,
+.loader::after {
+  left: -2px;
+  top: -2px;
+  display: none;
+  position: absolute;
+  content: '';
+  width: inherit;
+  height: inherit;
+  border: inherit;
+  border-radius: inherit;
+}
+
+.loader-2::after {
+  display: block;
+  left: -2px;
+  top: -2px;
+  border: inherit;
+  transform: rotate(65deg);
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+}
+
 /* 回答はここに書いてね */
