--- a/layout-parts/q12/css/style.css
+++ b/layout-parts/q12/css/style.css
@@ -1,5 +1,46 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.fukidashi {
+  position: relative;
+  display: inline-block;
+  padding: 20px;
+  min-width: 120px;
+  max-width: 500px;
+  color: #555;
+  font-size: 16px;
+  background: #fff;
+  border: 5px solid #555;
+  box-sizing: border-box;
+  border-radius: 30px;
+  line-height: 16px;
+}
 
-/* 回答はここに書いてね */
+.fukidashi::before {
+  content: " ";
+  position: absolute;
+  bottom: -24px;
+  left: 45px;
+  margin-left: -15px;
+  border: 12px solid transparent;
+  border-top: 12px solid #fff;
+  z-index: 2;
+}
+
+.fukidashi::after {
+  content: " ";
+  position: absolute;
+  bottom: -33px;
+  left: 45px;
+  margin-left: -17px;
+  border: 14px solid transparent;
+  border-top: 14px solid #555;
+  z-index: 1;
+}
+.fukidashi p {
+  margin: 0;
+  padding: 0;
+}
+
+
+  /* 回答はここに書いてね */
