--- a/layout-parts/q11/css/style.css
+++ b/layout-parts/q11/css/style.css
@@ -15,14 +15,11 @@
   display: block;
   width: 100%;
   opacity: 1;
-  -webkit-transition: opacity 0.5s, transform 0.5s;
   transition: opacity 0.5s, transform 0.5s;
-  -webkit-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
 }
 .image-box:hover img {
   opacity: 0.7;
-  -webkit-transform: scale3d(1.2, 1.2, 1);
   transform: scale3d(1.2, 1.2, 1);
 }
 .screan {
@@ -30,10 +27,8 @@
   position: absolute;
   top: 257px;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   width: 100%;
-  -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
 .image-box:hover .screan {
@@ -41,20 +36,16 @@
 }
 .text-box {
   padding: 20px;
-  -webkit-transform: scale3d(0, 0, 1);
   transform: scale3d(0, 0, 1);
-  -webkit-transition: transform 0.5s, color 0.5s;
   transition: transform 0.5s, color 0.5s;
 }
 .image-box:hover .text-box {
   color: white;
-  -webkit-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
 }
 /*animation*/
 .loader {
   position: relative;
-  display: inline-block;
   width: 100px;
   height: 100px;
   border: 10px solid #00bcd4;
@@ -63,6 +54,7 @@
   border-top-color: #ecf1f2;
   border-left-color: #ecf1f2;
   border-bottom-color: #ecf1f2;
+  margin: 0 auto;
 }
 
 .loader::before,
