--- a/layout-parts/q2/css/style.css
+++ b/layout-parts/q2/css/style.css
@@ -4,7 +4,7 @@ main {
   width: 900px;
   background: #eff3f4;
   padding: 20px;
-  margin: auto;
+  margin: 0 auto;
   box-sizing: border-box;
 }
 
