--- a/layout-parts/q6/css/style.css
+++ b/layout-parts/q6/css/style.css
@@ -5,6 +5,7 @@
   color: #fff;
   margin-left: 5px;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .common:hover {
@@ -16,6 +17,7 @@
   color: #fff;
   margin-left: 5px;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .error:hover {
@@ -27,6 +29,7 @@
   color: #fff;
   margin-left: 5px;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .disabled:hover {
@@ -39,6 +42,7 @@
   box-shadow: 0 1px 4px rgba(0,0,0,.12);
   margin-left: 5px;
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .shadow:hover {
