--- a/layout-parts/q5/css/style.css
+++ b/layout-parts/q5/css/style.css
@@ -15,8 +15,7 @@
 .margin0 {
   width: 30%;
   background: #e6f2ff;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px 0;
   margin: 0 auto;
   text-align: center;
 }
@@ -34,7 +33,7 @@
 .q5__vertical__table__txt {
   display: inline-block;
   background: #fff;
-  padding: 10px 10px 10px 10px;
+  padding: 10px;
   box-sizing: border-box;
 }
 
@@ -47,7 +46,7 @@
 
 .text {
   background: #fff;
-  padding: 10px 10px 10px 10px;
+  padding: 10px;
 }
 
 .q5__box__inner {
