--- a/layout-parts/q6/css/style.css
+++ b/layout-parts/q6/css/style.css
@@ -3,8 +3,7 @@
 .common {
   background: #00bcd4;
   color: #fff;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 0 5px;
   cursor: pointer;
 }
 
@@ -15,8 +14,7 @@
 .error {
   background: #ff4081;
   color: #fff;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 0 5px;
   cursor: pointer;
 }
 
@@ -27,8 +25,7 @@
 .disabled {
   background: #e5e5e5;
   color: #fff;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 0 5px;
   cursor: pointer;
 }
 
@@ -40,8 +37,7 @@
   color: #222;
   box-shadow: 0 1px 6px rgba(0,0,0,.12);
   box-shadow: 0 1px 4px rgba(0,0,0,.12);
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 0 5px;
   cursor: pointer;
 }
 
@@ -58,8 +54,7 @@
   height: 26px;
   border-radius: 3px;
   font-size: 16px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
 }
 
 .middle {
@@ -71,8 +66,7 @@
   height: 32px;
   border-radius: 5px;
   font-size: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 20px;
 }
 
 .large {
@@ -84,8 +78,7 @@
   height: 38px;
   border-radius: 7px;
   font-size: 24px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding: 0 25px;
 }
 
 
