--- a/layout-parts/q9/css/style.css
+++ b/layout-parts/q9/css/style.css
@@ -9,14 +9,14 @@
 }
 
 .gridbox {
-  padding: 10px 10px 10px 10px;
+  padding: 10px;
   box-sizing: border-box;
   float: left;
 }
 
 .box1 {
   width: 100%;
-  padding: 20px 20px 10px 20px;
+  padding: 20px 20px 10px;
   box-sizing: border-box;
 }
 
@@ -48,21 +48,22 @@
   align-items: center;
 }
 
-.gridbox:first-child{
+.gridbox:first-child {
   padding-left: 20px;
   box-sizing: border-box;
 }
 
-.gridbox:last-child{
+.gridbox:last-child {
   padding-right: 20px;
   box-sizing: border-box;
 }
 
-.container:last-child{
+.container:last-child {
   padding-bottom: 10px;
 }
-.item::before,
-.item::after {
+
+.clearfix::before,
+.clearfix::after {
   display: block;
   content: '';
   clear: both;
