--- a/layout-parts/q10/css/style.css
+++ b/layout-parts/q10/css/style.css
@@ -6,7 +6,7 @@
   width: 700px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #ECF1F2;
+  background-color: #ecf1f2;
 }
 
 .q10-title {
@@ -21,14 +21,14 @@
   width: 100%;
   height: 1px;
   background-color: #ccc;
-  content: " ";
+  content: "";
 }/*タイトルの横の線*/
 
 .q10-title-text {
   position: relative;
   display: inline-block;
   padding-right: 10px;
-  background-color: #ECF1F2;
+  background-color: #ecf1f2;
   font-size: 24px;
   font-weight: bold;
 }
@@ -54,7 +54,7 @@
 }
 
 .q10-main-items-title .hissu {
-  color: #F00;
+  color: #f00;
 }
 
 .q10-main-items-content {
@@ -78,7 +78,7 @@
   width: 100%;
   padding: 5px;
   border-radius: 3px;
-  background-color: #FFF;
+  background-color: #fff;
   font-size: 12px;
   line-height: 12px;
   box-sizing: border-box;
@@ -118,7 +118,7 @@
   width: 8px;
   height: 8px;
   margin-top: -4px;
-  background-color: #00BCD4;
+  background-color: #00bcd4;
   border-radius: 50%;
   content: '';
 }
@@ -130,8 +130,8 @@
 .q10-main-bottom-btn {
   padding: 0 10px;
   border-radius: 5px;
-  background-color: #00BCD4;
-  color: #FFF;
+  background-color: #00bcd4;
+  color: #fff;
   cursor: pointer;
   font-size: 16px;
   line-height: 26px;
@@ -147,7 +147,7 @@
   height: 203px;
   padding: 10px;
   border-radius: 3px;
-  background-color: #FFF;
+  background-color: #fff;
   font-size: 12px;
   box-sizing: border-box;
   resize: none;
